--- a/dev/styles/base.scss
+++ b/dev/styles/base.scss
@@ -1,9 +1,9 @@
 // fonts
 
 // Yanone Kaffeesat Light, Regular, Bold
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap');
 //Roboto
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 *, *::after, *::before
 {
