--- a/dev/styles/base.scss
+++ b/dev/styles/base.scss
@@ -1,3 +1,4 @@
+@import './mixins.scss';
 // fonts
 
 // Yanone Kaffeesat Light, Regular, Bold
@@ -52,7 +53,11 @@ body
 
 .container
 {
-    width: 90%;
     max-width: 1440px;
 	margin: 0 auto;
+}
+
+main 
+{
+	@include flex(row nowrap, flex-start, flex-start);
 }
