--- a/dev/styles/lk.scss
+++ b/dev/styles/lk.scss
@@ -17,6 +17,12 @@ aside.menu
             background-color: #fff;
             padding: 10px;
             border-radius: 10px;
+
+            text-align: center;
+
+
+            min-width: 200px;
+            max-width: 200px;
         }
     }
     
