--- a/styles/lk.scss
+++ b/styles/lk.scss
@@ -1,30 +1,29 @@
 @import './base.scss';
 @import './mixins.scss';
 
-aside.menu
-{
-    nav {
-        @include flex(column nowrap, flex-start, flex-start);
+// aside.menu
+// {
+//     nav {
+//         @include flex(column nowrap, flex-start, flex-start);
 
-        background-color: #0500FF;
+//         background-color: #0500FF;
 
-        padding: 15px;
+//         padding: 15px;
 
-        a 
-        {
-            margin-top: 15px;
+//         a 
+//         {
+//             margin-top: 15px;
 
-            background-color: #fff;
-            padding: 10px;
-            border-radius: 10px;
+//             background-color: #fff;
+//             padding: 10px;
+//             border-radius: 10px;
 
-            text-align: center;
+//             text-align: center;
 
 
-            min-width: 200px;
-            max-width: 200px;
-        }
-    }
-    
-    height: 100%;
-}
+//             min-width: 200px;
+//             max-width: 200px;
+//         }
+//     }
+
+// }
