--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 @import './base.scss';
 @import './mixins.scss';
 @import './header.scss';
-@import './loginWindow.scss';
+@import './auth.scss';
 @import './allsubjects.scss';
 @import './lk.scss';
 @import './add.scss';
