--- a/styles/add.scss
+++ b/styles/add.scss
@@ -2,16 +2,71 @@
 
 form.add 
 {
+    max-width: 700px;
+
     margin-top: 30px;
+    & .br
+    {
+        padding-bottom: 45px;
+    }
+
+    & input, & select, & textarea
+    {
+        border: 2px solid transparent;
+        border-radius: 10px;
+        padding: 10px;
+        padding-left: 20px;
+        color: #2d2d2d;
+        letter-spacing: 0.05rem;
+        font-size: 15px;
+        background-color: #ffffff;
+        transition: 0.3s border;
+        width: 100%;
+
+        transition: 0.3s border, 0.6s border-radius;
+    
+        &:hover, &:focus, &:active
+        {
+            border-radius: 0;
+            border: 2px solid #4b2e83;
+        }
+    }
+
+    & input[type=submit]
+    {
+        cursor: pointer;
+        background-color: rgb(58, 58, 58);
+        padding: 15px 50px;
+    
+        margin-top: 40px;
+        border-radius: 10px;
+    
+        width: 100%;
+        
+        font-size: 14px;
+        font-weight: bold;
+        color: #fff;
+        letter-spacing: unset;
+    
+        transition: 0.8s background, 0.6s border-radius;;
+        &:hover, &:focus, &:active
+        {
+            border-radius: 0;
+            background-color:#4b2e83;
+        }
+    }
 }
 
 label {
+    opacity: 0.8;
+    margin-left: 3px;
     display: block;
+    margin-bottom: 8px;
 }
 
 div.subjectNameDescWrapper
 {
-    @include flex(row wrap, flex-start, flex-start);
+    @include flex(column wrap, flex-start, flex-start);
     
 
     input {
@@ -19,9 +74,13 @@ div.subjectNameDescWrapper
     }
 }
 
-div.subjectDesc
+div.subjectDesc, div.subjectName
 {
-    margin-left: 30px;
+    width: 100%;
+    & textarea
+    {
+        width: 100%;
+    }
 }
 
 div.subjectNameDescWrapper,
@@ -35,11 +94,9 @@ textarea.add_input {
 
     resize: vertical;
 
-    max-width: 350px;
-    min-width: 350px;
-
-    max-height: 100px;
     min-height: 100px;
+    height: 120px;
+    max-height: 250px;
 
     border: none;
     outline: none;
@@ -47,16 +104,22 @@ textarea.add_input {
     font-size: 18px;
 }
 
+div.subjectName textarea
+{
+    min-height: 40px;
+    height: 40px;
+    max-height: 80px;
+}
+
 input.add_input, select.add_input {
     padding: 5px;
-    min-width: 300px;
     font-size: 16px;
 }
 
 input.add_input[type="number"] 
 {
     min-width: 80px;
-    max-width: 80px;
+    max-width: 180px;
 }
 
 input.add_button
