--- a/styles/auth.scss
+++ b/styles/auth.scss
@@ -43,10 +43,11 @@ input.login-input
     font-size: 15px;
 
     background-color: rgb(45, 45, 45);
-    transition: 0.3s border;
+    transition: 0.3s border, 0.6s border-radius;
     
-    &:hover
+    &:hover, &:focus, &:active
     {
+        border-radius: 0;
         border: 2px solid #4b2e83;
     }
 }
@@ -67,9 +68,10 @@ input#login
     color: #fff;
     letter-spacing: unset;
 
-    transition: 0.8s background;
-    &:hover
+    transition: 0.8s background, 0.6s border-radius;
+    &:hover, &:focus, &:active
     {
+        border-radius: 0;
         background-color:#4b2e83;
     }
 }
