--- a/styles/base.scss
+++ b/styles/base.scss
@@ -48,7 +48,7 @@ html
 	height: 100%;
 }
 
-body, input, a
+body, input, a, textarea
 {
 	font-family: "Roboto", serif;
 }
@@ -83,6 +83,13 @@ main
 
 aside
 {
+	min-height: min-content;
+	max-height: 100vh;
+
+    position: sticky;
+	top: 0;
+	left: 0;
+
 	display: flex;
 	flex-flow: column nowrap;
 
@@ -92,6 +99,8 @@ aside
 	align-self: stretch;
 	background-color: #16191c;
 
+	overflow-x: hidden;
+	
 
 	& img
 	{
@@ -112,6 +121,7 @@ aside
 		padding-top: 20px;
 		display: flex;
 		flex-flow: column nowrap;
+		margin-bottom: 150px;
 	}
 
 	& .logo-wrapper
@@ -190,5 +200,31 @@ header
 		margin: 0 10px;
 		opacity: 0.2;
 		height: 1px;
+	}
+}
+
+aside::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px transparent;
+	background-color: transparent;
+}
+
+aside::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: transparent;
+}
+
+aside::-webkit-scrollbar-thumb
+{
+	background-color: #3e474e;
+}
+
+@media screen and (max-width: 900px)
+{
+	aside
+	{
+		min-width: 250px;
+    	max-width: 250px;
 	}
 }
