--- a/styles/add.scss
+++ b/styles/add.scss
@@ -20,7 +20,6 @@ form.add
         letter-spacing: 0.05rem;
         font-size: 15px;
         background-color: #ffffff;
-        transition: 0.3s border;
         width: 100%;
 
         transition: 0.3s border, 0.6s border-radius;
@@ -120,7 +119,7 @@ input.add_input, select.add_input {
     font-size: 16px;
 }
 
-input.add_input[type="number"] 
+input.add_input[type="number"], input#groupCode
 {
     min-width: 80px;
     max-width: 180px;
@@ -139,12 +138,9 @@ input.add_button
 
 button.add_oneMore
 {
-    background-color: transparent;
-
     span
     {
         font-size: 30px;
-        display: block;
         color: #fff;
     }
 }
