--- a/styles/base.scss
+++ b/styles/base.scss
@@ -29,6 +29,13 @@ button
 {
 	border: none;
 	outline: none;
+
+	background-color: transparent;
+
+	span.material-icons
+	{
+		display: block;
+	}
 }
 
 input
@@ -39,8 +46,8 @@ input
 
 html, body
 {
-	// height: 100%;
-	// width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 html
@@ -205,6 +212,7 @@ header
 
 aside::-webkit-scrollbar-track
 {
+	box-shadow: inset 0 0 6px transparent;
 	-webkit-box-shadow: inset 0 0 6px transparent;
 	background-color: transparent;
 }
