--- a/styles/style.css
+++ b/styles/style.css
@@ -366,6 +366,23 @@ div.sort-subjects .sort-subjects__all {
   padding-left: 10px;
 }
 
+.update-subjects-group {
+  cursor: pointer;
+  background-color: #3a3a3a;
+  padding: 15px 50px;
+  border-radius: 10px;
+  width: 200px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  letter-spacing: unset;
+  transition: 0.8s background, 0.6s border-radius;
+}
+.update-subjects-group:hover {
+  border-radius: 0;
+  background-color: #4b2e83;
+}
+
 *, *::after, *::before {
   box-sizing: border-box;
   margin: 0;
