--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap");
@@ -70,6 +71,7 @@ aside {
   min-height: -webkit-min-content;
   min-height: min-content;
   max-height: 100vh;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
@@ -100,6 +102,7 @@ aside nav {
 }
 aside .logo-wrapper {
   width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
 }
@@ -450,6 +453,7 @@ aside {
   min-height: -webkit-min-content;
   min-height: min-content;
   max-height: 100vh;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
@@ -480,6 +484,7 @@ aside nav {
 }
 aside .logo-wrapper {
   width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
 }
@@ -670,4 +675,32 @@ input.add_button {
 button.add_oneMore span {
   font-size: 30px;
   color: #fff;
+}
+
+.workload_teacher {
+  display: grid;
+  margin-top: 25px;
+  grid-gap: 1px;
+  grid-template-columns: minmax(-webkit-min-content, -webkit-max-content) 1fr minmax(100px, -webkit-min-content) minmax(100px, -webkit-min-content);
+  grid-template-columns: minmax(min-content, max-content) 1fr minmax(100px, min-content) minmax(100px, min-content);
+}
+
+.workload_teacher > p {
+  padding: 10px 25px;
+}
+
+.workload_teacher > p:nth-child(4n+3) {
+  text-align: center;
+}
+
+.workload_teacher > p:nth-child(4n+4) {
+  text-align: center;
+}
+
+.workload_teacher > p:not(.br):not(.heading):nth-child(4n+4)::after {
+  content: " ч";
+}
+
+.workload_teacher > p.tchr, .workload_teacher > p.data, .workload_teacher > p.heading {
+  background-color: #2C343A;
 }
