--- a/styles/allsubjects.scss
+++ b/styles/allsubjects.scss
@@ -146,6 +146,11 @@ div.sort-subjects
             background-color: #2c343a;
             margin-bottom: 7px;
             padding: 15px 25px;
+            & span
+            {
+                font-size: 12px;
+                opacity: 0.5;
+            }
         }
     }
     .sort-subjects__group
