disabled button when no subjects, fix delete teacher icon acsess, delete subjects from specs and groups depends on $_GET[]

--- a/styles/allsubjects.scss
+++ b/styles/allsubjects.scss
@@ -183,4 +183,9 @@ div.sort-subjects
         border-radius: 0;
         background-color: #4b2e83;
     }
+    &.disabled
+    {
+        background-color: #000;
+        cursor: not-allowed;
+    }
 }
