--- a/styles/allsubjects.scss
+++ b/styles/allsubjects.scss
@@ -1,191 +1,221 @@
-@import './mixins.scss';
+@import "./mixins.scss";
 
 section
 {
-    padding: 25px;
-    width: 100%;
+	width: 100%;
+	padding: 25px;
 }
 section.all-subjects, section.all-groups
 {
-    
-    @include grid(1fr 1fr 1fr 1fr, 15px);
+	@include grid(1fr 1fr 1fr 1fr, 15px);
 }
 
 div.subject-wrapper, a.groups-wrapper
 {
-    border-radius: 10px;
+	min-width: 300px;
+	padding: 20px 25px;
 
-    @include flex(row nowrap, space-between, center);
+	border-radius: 10px;
+	background-color: #2C343A;
+@include flex(row nowrap, space-between, center);
 
-    padding: 20px 25px;
+	div
+	{
+		height: 100%;
 
-    background-color: #2c343a;
+		@include flex(column nowrap, space-between, flex-start);
+		p
+		{
+			margin-bottom: 12px;
 
-    min-width: 300px;
-    
-    div
-    {
-        @include flex(column nowrap, space-between, flex-start);
+			&:last-child
+			{
+				margin-bottom: unset;
+			}
+		}
+	}
 
-        height: 100%;
-        p
-        {
-            margin-bottom: 12px;
+	p.subject-profile, p.subject-desc, p.group-profile, p.group-desc
+	{
+		font-size: 12px;
 
-            &:last-child
-            {
-                margin-bottom: unset;
-            }
-        }
-    }
-    
-    p.subject-profile, p.subject-desc, p.group-profile, p.group-desc
-    {
-        color: #A5A5A5;
-        font-size: 12px;
-    }
+		color: #A5A5A5;
+	}
 
-    p.subject-desc,  p.group-desc 
-    {
-        max-width: 200px;
-    }
+	p.subject-desc, p.group-desc
+	{
+		max-width: 200px;
+	}
 
-    p.subject-name, p.group-name
-    {
-        color: #fff;
-        font-size: 23px;
-        max-width: 300px;
+	p.subject-name, p.group-name
+	{
+		font-size: 23px;
 
-    }
+		max-width: 300px;
 
-    p.subject-hours, p.group-hours
-    {
-        min-width: 50px;
-        text-align: right;
-    }
-    p.group-profile, p.group-name, p.group-desc
-    {
-        max-width: 100%;
-        text-transform: uppercase;
-        text-align: center;
-        width: 100%;
-    }
+		color: #FFFFFF;
+	}
 
+	p.subject-hours, p.group-hours
+	{
+		min-width: 50px;
 
+		text-align: right;
+	}
+	p.group-profile, p.group-name, p.group-desc
+	{
+		width: 100%;
+		max-width: 100%;
 
+		text-align: center;
+		text-transform: uppercase;
+	}
 }
 a.groups-wrapper
 {
-    &:hover
-    {
-        box-shadow: 3px 3px rgb(165, 165, 165);
-        opacity: 1;
-    }
-    opacity: 0.8;
-    transition: 0.3s all;
+	transition: 0.3s all;
+
+	opacity: 0.8;
+	&:hover
+	{
+		opacity: 1;
+		box-shadow: 3px 3px rgb(165, 165, 165);
+	}
 }
 a.groups-wrapper div
 {
-    width: 100%;
+	width: 100%;
 }
 
 button.removeSubject
 {
-    &:hover
-    {
-        cursor: pointer;
-    }
-    
-    span
-    {
-        color: #fff;
-    }
+	&:hover
+	{
+		cursor: pointer;
+	}
+
+	span
+	{
+		color: #FFFFFF;
+	}
 }
 
 @media screen and (max-width: 1600px)
 {
-    section.all-subjects, section.all-groups
-    {
-        @include grid(1fr 1fr 1fr, 15px);
-    }
+	section.all-subjects, section.all-groups
+	{
+		@include grid(1fr 1fr 1fr, 15px);
+	}
 }
 
 @media screen and (max-width: 1400px)
 {
-    section.all-subjects, section.all-groups
-    {
-        @include grid(1fr 1fr, 15px);
-    }
+	section.all-subjects, section.all-groups
+	{
+		@include grid(1fr 1fr, 15px);
+	}
 }
 
 @media screen and (max-width: 1000px)
 {
-    section.all-subjects, section.all-groups
-    {
-        @include grid(1fr, 15px);
-    }
+	section.all-subjects, section.all-groups
+	{
+		@include grid(1fr, 15px);
+	}
 }
 
 div.sort-subjects
 {
-    margin-top: 25px;
+	display: flex;
+	flex-flow: row nowrap;
 
-    display: flex;
-    flex-flow: row nowrap;
-    .sort-subjects__all, .sort-subjects__group
-    {
-        padding-top: 5px;
-        padding-bottom: 25px;
-        min-width: 50%;
-        flex-grow: 1;
+	margin-top: 25px;
 
-        & p
-        {
-            cursor: move;
-            border-radius: 3px;
-            background-color: #2c343a;
-            margin-bottom: 7px;
-            padding: 15px 25px;
-            & span
-            {
-                font-size: 12px;
-                opacity: 0.5;
-            }
-        }
-    }
-    .sort-subjects__group
-    {
-        border-right: 1px solid rgba(255,255,255, 0.2);
-        padding-right: 10px;
-    }
-    .sort-subjects__all
-    {
-        padding-left: 10px;
-    }
+	user-select: none;
+	.sort-subjects__all, .sort-subjects__group
+	{
+		display: flex;
+		align-items: stretch;
+		flex-flow: column nowrap;
+		flex-grow: 1;
+		justify-content: flex-start;
 
-    user-select: none;
+		min-width: 50%;
+		padding-top: 5px;
+		padding-bottom: 25px;
+
+		& p
+		{
+			margin-bottom: 7px;
+			padding: 15px 25px;
+
+			cursor: move;
+
+			border-radius: 3px;
+			background-color: #2C343A;
+			& span
+			{
+				font-size: 12px;
+
+				opacity: 0.5;
+			}
+		}
+	}
+	.sort-subjects__group
+	{
+		padding-right: 10px;
+
+		border-right: 1px solid rgba(255,255,255, 0.2);
+	}
+	.sort-subjects__all
+	{
+		padding-left: 10px;
+	}
 }
 
-.update-subjects-group
+.update-subjects-group, .clear-subjects-group
 {
-    cursor: pointer;
-    background-color: #3a3a3a;
-    padding: 15px 50px;
-    border-radius: 10px;
-    width: 200px;
-    font-size: 14px;
-    font-weight: bold;
-    color: #fff;
-    letter-spacing: unset;
-    transition: 0.8s background, 0.6s border-radius;
-    &:hover
-    {
-        border-radius: 0;
-        background-color: #4b2e83;
-    }
-    &.disabled
-    {
-        background-color: #000;
-        cursor: not-allowed;
-    }
+	font-size: 14px;
+	font-weight: bold;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	width: 200px;
+	min-height: 50px;
+
+	cursor: pointer;
+	transition: 0.8s background, 0.6s border-radius;
+	letter-spacing: unset;
+
+	color: #FFFFFF;
+	border-radius: 10px;
+	background-color: #3A3A3A;
+	&:not(.disabled):hover
+	{
+		border-radius: 0;
+		background-color: #4B2E83;
+	}
+
+	&.disabled
+	{
+		cursor: not-allowed;
+
+		opacity: 0.3;
+	}
+}
+
+.buttons
+{
+	display: flex;
+	justify-content: space-between;
+
+	padding: 15px 0;
+	padding-top: 35px;
+}
+
+.sort-subjects .not-draggable
+{
+	z-index: -5;
 }
