--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ aside {
   min-height: -webkit-min-content;
   min-height: min-content;
   max-height: 100vh;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
@@ -242,8 +243,8 @@ input#login:hover, input#login:focus, input#login:active {
 }
 
 section {
-  padding: 25px;
   width: 100%;
+  padding: 25px;
 }
 
 section.all-subjects, section.all-groups {
@@ -253,21 +254,21 @@ section.all-subjects, section.all-groups {
 }
 
 div.subject-wrapper, a.groups-wrapper {
+  min-width: 300px;
+  padding: 20px 25px;
   border-radius: 10px;
+  background-color: #2C343A;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 25px;
-  background-color: #2c343a;
-  min-width: 300px;
 }
 div.subject-wrapper div, a.groups-wrapper div {
+  height: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: flex-start;
-  height: 100%;
 }
 div.subject-wrapper div p, a.groups-wrapper div p {
   margin-bottom: 12px;
@@ -276,35 +277,35 @@ div.subject-wrapper div p:last-child, a.groups-wrapper div p:last-child {
   margin-bottom: unset;
 }
 div.subject-wrapper p.subject-profile, div.subject-wrapper p.subject-desc, div.subject-wrapper p.group-profile, div.subject-wrapper p.group-desc, a.groups-wrapper p.subject-profile, a.groups-wrapper p.subject-desc, a.groups-wrapper p.group-profile, a.groups-wrapper p.group-desc {
-  color: #A5A5A5;
   font-size: 12px;
+  color: #A5A5A5;
 }
 div.subject-wrapper p.subject-desc, div.subject-wrapper p.group-desc, a.groups-wrapper p.subject-desc, a.groups-wrapper p.group-desc {
   max-width: 200px;
 }
 div.subject-wrapper p.subject-name, div.subject-wrapper p.group-name, a.groups-wrapper p.subject-name, a.groups-wrapper p.group-name {
-  color: #fff;
   font-size: 23px;
   max-width: 300px;
+  color: #FFFFFF;
 }
 div.subject-wrapper p.subject-hours, div.subject-wrapper p.group-hours, a.groups-wrapper p.subject-hours, a.groups-wrapper p.group-hours {
   min-width: 50px;
   text-align: right;
 }
 div.subject-wrapper p.group-profile, div.subject-wrapper p.group-name, div.subject-wrapper p.group-desc, a.groups-wrapper p.group-profile, a.groups-wrapper p.group-name, a.groups-wrapper p.group-desc {
-  max-width: 100%;
-  text-transform: uppercase;
-  text-align: center;
   width: 100%;
+  max-width: 100%;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 a.groups-wrapper {
-  opacity: 0.8;
   transition: 0.3s all;
+  opacity: 0.8;
 }
 a.groups-wrapper:hover {
-  box-shadow: 3px 3px #a5a5a5;
   opacity: 1;
+  box-shadow: 3px 3px #a5a5a5;
 }
 
 a.groups-wrapper div {
@@ -315,7 +316,7 @@ button.removeSubject:hover {
   cursor: pointer;
 }
 button.removeSubject span {
-  color: #fff;
+  color: #FFFFFF;
 }
 
 @media screen and (max-width: 1600px) {
@@ -340,56 +341,74 @@ button.removeSubject span {
   }
 }
 div.sort-subjects {
-  margin-top: 25px;
   display: flex;
   flex-flow: row nowrap;
+  margin-top: 25px;
   -webkit-user-select: none;
           user-select: none;
 }
 div.sort-subjects .sort-subjects__all, div.sort-subjects .sort-subjects__group {
+  display: flex;
+  align-items: stretch;
+  flex-flow: column nowrap;
+  flex-grow: 1;
+  justify-content: flex-start;
+  min-width: 50%;
   padding-top: 5px;
   padding-bottom: 25px;
-  min-width: 50%;
-  flex-grow: 1;
 }
 div.sort-subjects .sort-subjects__all p, div.sort-subjects .sort-subjects__group p {
-  cursor: move;
-  border-radius: 3px;
-  background-color: #2c343a;
   margin-bottom: 7px;
   padding: 15px 25px;
+  cursor: move;
+  border-radius: 3px;
+  background-color: #2C343A;
 }
 div.sort-subjects .sort-subjects__all p span, div.sort-subjects .sort-subjects__group p span {
   font-size: 12px;
   opacity: 0.5;
 }
 div.sort-subjects .sort-subjects__group {
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
   padding-right: 10px;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
 div.sort-subjects .sort-subjects__all {
   padding-left: 10px;
 }
 
-.update-subjects-group {
-  cursor: pointer;
-  background-color: #3a3a3a;
-  padding: 15px 50px;
-  border-radius: 10px;
-  width: 200px;
+.update-subjects-group, .clear-subjects-group {
   font-size: 14px;
   font-weight: bold;
-  color: #fff;
-  letter-spacing: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  min-height: 50px;
+  cursor: pointer;
   transition: 0.8s background, 0.6s border-radius;
+  letter-spacing: unset;
+  color: #FFFFFF;
+  border-radius: 10px;
+  background-color: #3A3A3A;
 }
-.update-subjects-group:hover {
+.update-subjects-group:not(.disabled):hover, .clear-subjects-group:not(.disabled):hover {
   border-radius: 0;
-  background-color: #4b2e83;
+  background-color: #4B2E83;
 }
-.update-subjects-group.disabled {
-  background-color: #000;
+.update-subjects-group.disabled, .clear-subjects-group.disabled {
   cursor: not-allowed;
+  opacity: 0.3;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0;
+  padding-top: 35px;
+}
+
+.sort-subjects .not-draggable {
+  z-index: -5;
 }
 
 *, *::after, *::before {
@@ -460,6 +479,7 @@ aside {
   min-height: -webkit-min-content;
   min-height: min-content;
   max-height: 100vh;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   left: 0;
