--- a/styles/allsubjects.scss
+++ b/styles/allsubjects.scss
@@ -17,13 +17,14 @@ div.subject-wrapper, a.groups-wrapper
 
 	border-radius: 10px;
 	background-color: #2C343A;
-@include flex(row nowrap, space-between, center);
 
+@include flex(row nowrap, space-between, center);
 	div
 	{
 		height: 100%;
 
-		@include flex(column nowrap, space-between, flex-start);
+@include flex(column nowrap, space-between, flex-start);
+
 		p
 		{
 			margin-bottom: 12px;
@@ -129,8 +130,6 @@ div.sort-subjects
 	display: flex;
 	flex-flow: row nowrap;
 
-	margin-top: 25px;
-
 	user-select: none;
 	.sort-subjects__all, .sort-subjects__group
 	{
@@ -206,6 +205,34 @@ div.sort-subjects
 	}
 }
 
+.search-subjects-group
+{
+	font-size: 14px;
+	font-weight: bold;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	width: 200px;
+	min-height: 50px;
+
+	cursor: pointer;
+	transition: 0.8s background, 0.6s border-radius;
+	letter-spacing: unset;
+
+	color: #FFFFFF;
+    border: 2px solid transparent;
+    border-radius: 10px;
+	background-color: #3A3A3A;
+
+	&:hover
+	{
+		border: 2px solid #4B2E83;
+		border-radius: 0;
+	}
+}
+
 .buttons
 {
 	display: flex;
@@ -218,4 +245,16 @@ div.sort-subjects
 .sort-subjects .not-draggable
 {
 	z-index: -5;
+}
+
+.titles
+{
+	display: flex;
+	flex-flow: row nowrap;
+
+	margin-top: 35px;
+	h3
+	{
+		flex-grow: 1;
+	}
 }
