fix style button

--- a/styles/allsubjects.scss
+++ b/styles/allsubjects.scss
@@ -172,7 +172,7 @@ div.sort-subjects
 	}
 }
 
-.update-subjects-group, .clear-subjects-group
+.update-subjects-group, .clear-subjects-group, .create-teacher-file
 {
 	font-size: 14px;
 	font-weight: bold;
