--- a/styles/auth.scss
+++ b/styles/auth.scss
@@ -1,77 +1,127 @@
-@import './mixins.scss';
+@import "./mixins.scss";
 
 body.auth
 {
-    & .container
-    {
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center;
-    }
+	& .container
+	{
+		display: flex;
+		align-items: center;
+		flex-flow: column nowrap;
+		justify-content: center;
+
+		max-width: 600px;
+
+		background-color: #16191C;
+		& .error
+		{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			width: 100%;
+			height: 55px;
+
+			opacity: 0.4;
+			&:not(:empty)
+			{
+				background-color: #2C343A;
+			}
+		}
+	}
 }
 
 form#login-form
 {
-    @include flex(column nowrap, flex-start, center);
+	min-height: 300px;
+	margin: 50px 25px;
 
-    margin: 50px 25px;
-    min-height: 300px;
+@include flex(column nowrap, flex-start, center);
 
-    div.login-wrapper:first-child {
-        margin-bottom: 40px;
-    }
+	div.login-wrapper:first-child
+	{
+		margin-bottom: 40px;
+	}
 }
 
-label.login-labels 
+label.login-labels
 {
-    text-align: center;
-    display: block;
-    margin-bottom: 10px;
+	display: block;
+
+	margin-bottom: 10px;
+
+	text-align: center;
 }
 
 input.login-input
 {
-    border: 2px solid transparent;
-    border-radius: 10px;
-    padding: 10px;
-    padding-left: 20px;
-    min-width: 300px;
+	font-size: 15px;
 
-    color: #fff;
-    letter-spacing: 0.05rem;
-    font-size: 15px;
+	min-width: 300px;
+	padding: 10px;
+	padding-left: 20px;
 
-    background-color: rgb(45, 45, 45);
-    transition: 0.3s border, 0.6s border-radius;
-    
-    &:hover, &:focus, &:active
-    {
-        border-radius: 0;
-        border: 2px solid #4b2e83;
-    }
+	transition: 0.3s border, 0.6s border-radius;
+	text-align: center;
+	letter-spacing: 0.05rem;
+
+	color: #FFFFFF;
+	border: 2px solid transparent;
+	border-radius: 10px;
+	background-color: rgb(45, 45, 45);
+
+	&:hover, &:focus, &:active
+	{
+		border: 2px solid #4B2E83;
+		border-radius: 0;
+	}
 }
 
 input#login
 {
-    cursor: pointer;
-    background-color: rgb(58, 58, 58);
-    padding: 15px 50px;
 
-    margin-top: 40px;
-    border-radius: 10px;
+    height: 50px;
 
-    width: 100%;
-    
-    font-size: 14px;
-    font-weight: bold;
-    color: #fff;
-    letter-spacing: unset;
+	font-size: 14px;
+	font-weight: bold;
 
-    transition: 0.8s background, 0.6s border-radius;
-    &:hover, &:focus, &:active
-    {
-        border-radius: 0;
-        background-color:#4b2e83;
-    }
+	width: 100%;
+	margin-top: 40px;
+
+	cursor: pointer;
+	transition: 0.8s background, 0.6s border-radius;
+	letter-spacing: unset;
+
+	color: #FFFFFF;
+	border-radius: 10px;
+	background-color: rgb(58, 58, 58);
+	&:hover, &:focus, &:active
+	{
+		border-radius: 0;
+		background-color: #4B2E83;
+	}
+}
+
+@media screen and (max-width: 700px)
+{
+	body.auth .container form, .login-wrapper
+	{
+		width: 100%;
+		min-width: 100%;
+	}
+	.login-wrapper input, input#login
+	{
+		width: 90%;
+		margin: 0 auto;
+	}
+	.login-wrapper
+	{
+		display: flex;
+		align-items: center;
+		flex-flow: column nowrap;
+		justify-content: center;
+	}
+	input#login
+	{
+		margin-top: 35px;
+	}
 }
