--- a/styles/style.css
+++ b/styles/style.css
@@ -184,64 +184,100 @@ aside::-webkit-scrollbar-thumb {
 }
 body.auth .container {
   display: flex;
+  align-items: center;
   flex-flow: column nowrap;
   justify-content: center;
+  max-width: 600px;
+  background-color: #16191C;
+}
+body.auth .container .error {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 55px;
+  opacity: 0.4;
+}
+body.auth .container .error:not(:empty) {
+  background-color: #2C343A;
 }
 
 form#login-form {
+  min-height: 300px;
+  margin: 50px 25px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
-  margin: 50px 25px;
-  min-height: 300px;
 }
 form#login-form div.login-wrapper:first-child {
   margin-bottom: 40px;
 }
 
 label.login-labels {
-  text-align: center;
   display: block;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 input.login-input {
-  border: 2px solid transparent;
-  border-radius: 10px;
+  font-size: 15px;
+  min-width: 300px;
   padding: 10px;
   padding-left: 20px;
-  min-width: 300px;
-  color: #fff;
-  letter-spacing: 0.05rem;
-  font-size: 15px;
-  background-color: #2d2d2d;
   transition: 0.3s border, 0.6s border-radius;
+  text-align: center;
+  letter-spacing: 0.05rem;
+  color: #FFFFFF;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  background-color: #2d2d2d;
 }
 input.login-input:hover, input.login-input:focus, input.login-input:active {
+  border: 2px solid #4B2E83;
   border-radius: 0;
-  border: 2px solid #4b2e83;
 }
 
 input#login {
-  cursor: pointer;
-  background-color: #3a3a3a;
-  padding: 15px 50px;
-  margin-top: 40px;
-  border-radius: 10px;
-  width: 100%;
+  height: 50px;
   font-size: 14px;
   font-weight: bold;
-  color: #fff;
-  letter-spacing: unset;
+  width: 100%;
+  margin-top: 40px;
+  cursor: pointer;
   transition: 0.8s background, 0.6s border-radius;
+  letter-spacing: unset;
+  color: #FFFFFF;
+  border-radius: 10px;
+  background-color: #3a3a3a;
 }
 input#login:hover, input#login:focus, input#login:active {
   border-radius: 0;
-  background-color: #4b2e83;
+  background-color: #4B2E83;
 }
 
+@media screen and (max-width: 700px) {
+  body.auth .container form, .login-wrapper {
+    width: 100%;
+    min-width: 100%;
+  }
+
+  .login-wrapper input, input#login {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .login-wrapper {
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    justify-content: center;
+  }
+
+  input#login {
+    margin-top: 35px;
+  }
+}
 section {
   width: 100%;
   padding: 25px;
