--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,13 @@ aside::-webkit-scrollbar-thumb {
     max-width: 250px;
   }
 }
+h3.empty {
+  margin: 55px 30px 20px 30px;
+  text-align: center;
+  width: auto;
+  width: -webkit-fill-available;
+}
+
 body.auth .container {
   display: flex;
   align-items: center;
@@ -658,6 +665,13 @@ aside::-webkit-scrollbar-thumb {
     max-width: 250px;
   }
 }
+h3.empty {
+  margin: 55px 30px 20px 30px;
+  text-align: center;
+  width: auto;
+  width: -webkit-fill-available;
+}
+
 form.add {
   max-width: 700px;
   margin-top: 30px;
