--- a/styles/base.scss
+++ b/styles/base.scss
@@ -27,9 +27,9 @@ ul
 
 button
 {
+	cursor: pointer;
 	border: none;
 	outline: none;
-
 	background-color: transparent;
 
 	span.material-icons
@@ -54,19 +54,20 @@ html
 	height: 100%;
 }
 
-body, input, a, textarea
+body, input, a, textarea, button
 {
 	font-family: "Roboto", serif;
 }
 
 body
 {
-	min-height: 100%;
-	color: #FFFFFF;
-	background-color: #1d2329;
-
 	display: flex;
 	flex-flow: row nowrap;
+
+	min-height: 100%;
+
+	color: #FFFFFF;
+	background-color: #1D2329;
 }
 .container
 {
@@ -79,7 +80,6 @@ main
 {
 	display: flex;
 	flex-flow: column nowrap;
-
 	flex-grow: 1;
 	section
 	{
@@ -89,32 +89,32 @@ main
 
 aside
 {
-	min-height: min-content;
-	max-height: 100vh;
-
-    position: sticky;
+	position: sticky;
 	top: 0;
 	left: 0;
 
 	display: flex;
+	overflow-x: hidden;
+	align-self: stretch;
 	flex-flow: column nowrap;
 
 	min-width: 300px;
 	max-width: 300px;
+	min-height: min-content;
+	max-height: 100vh;
 
-	align-self: stretch;
-	background-color: #16191c;
+	background-color: #16191C;
 
-	overflow-x: hidden;
-	
 
 	& img
 	{
-		opacity: 0.5;
+		height: 50px;
 		margin: 10px auto;
 		margin-top: 35px;
-		height: 50px;
+
 		transition: 0.3s opacity;
+
+		opacity: 0.5;
 		&:hover
 		{
 			opacity: 0.8;
@@ -123,11 +123,12 @@ aside
 
 	& nav
 	{
-		flex-grow: 1;
-		padding-top: 20px;
 		display: flex;
 		flex-flow: column nowrap;
+		flex-grow: 1;
+
 		margin-bottom: 150px;
+		padding-top: 20px;
 	}
 
 	& .logo-wrapper
@@ -135,36 +136,40 @@ aside
 		width: fit-content;
 		margin: 0 auto;
 	}
-	
+
 	& a:not(.logo-wrapper)
 	{
-		color: #FFFFFF;
 		padding: 15px 25px;
 		padding-right: 50px;
-		opacity: 0.5;
+
 		transition: 0.5s background, 0.3s opacity;
+
+		opacity: 0.5;
+		color: #FFFFFF;
 		&:hover
 		{
-			background-color: rgba($color: #FFFFFF, $alpha: 0.1);
 			opacity: 1;
+			background-color: rgba($color: #FFFFFF, $alpha: 0.1);
 		}
 	}
-	
+
 	& form
 	{
 		& input
 		{
-			color: #FFFFFF;
-			padding: 20px 25px;
-			opacity: 0.5;
-			cursor: pointer;
 			width: 100%;
+			padding: 20px 25px;
+
+			cursor: pointer;
 			transition: 0.5s background, 0.3s opacity;
+
+			opacity: 0.5;
+			color: #FFFFFF;
 			background-color: transparent;
 			&:hover
 			{
-				background-color: rgba($color: #FFFFFF, $alpha: 0.1);
 				opacity: 1;
+				background-color: rgba($color: #FFFFFF, $alpha: 0.1);
 			}
 		}
 	}
@@ -174,57 +179,62 @@ header
 {
 	& .container
 	{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
 		height: 100%;
 		min-height: 45px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		& p
 		{
-			height: 100%;
 			width: 100%;
+			height: 100%;
 			& a
 			{
 				display: flex;
-				justify-content: center;
 				align-items: center;
-				height: 100%;
-				opacity: 0.6;
+				justify-content: center;
+
 				width: 100%;
-				color: #FFFFFF;
+				height: 100%;
+
 				transition: 0.6s opacity;
+
+				opacity: 0.6;
+				color: #FFFFFF;
 				&:hover
 				{
 					opacity: 1;
 				}
 			}
 		}
-
 	}
 	& hr
 	{
-		margin: 0 10px;
-		opacity: 0.2;
 		height: 1px;
+		margin: 0 10px;
+
+		opacity: 0.2;
 	}
 }
 
 aside::-webkit-scrollbar-track
 {
-	box-shadow: inset 0 0 6px transparent;
-	-webkit-box-shadow: inset 0 0 6px transparent;
 	background-color: transparent;
+	-webkit-box-shadow: inset 0 0 6px transparent;
+	        box-shadow: inset 0 0 6px transparent;
 }
 
 aside::-webkit-scrollbar
 {
 	width: 4px;
+
 	background-color: transparent;
 }
 
 aside::-webkit-scrollbar-thumb
 {
-	background-color: #3e474e;
+	background-color: #3E474E;
 }
 
 @media screen and (max-width: 900px)
@@ -232,14 +242,15 @@ aside::-webkit-scrollbar-thumb
 	aside
 	{
 		min-width: 250px;
-    	max-width: 250px;
+		max-width: 250px;
 	}
 }
 
 h3.empty
 {
-	margin: 55px 30px 20px 30px;
-	text-align: center;
 	width: auto;
 	width: -webkit-fill-available;
+	margin: 55px 30px 20px 30px;
+
+	text-align: center;
 }
